add linter and formatter

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
-    "@nextui-org/button": "^2.0.31",
-    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/button": "^2.0.33",
+    "@nextui-org/react": "^2.4.1",
+    "@stacks/connect": "^7.7.1",
     "@stacks/network": "^6.13.0",
     "@stacks/stacking": "^6.15.0",
     "@tsparticles/react": "^3.0.0",
@@ -31,10 +34,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-react": "^7.34.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8"
   }
 }
