update landing to fit subdomain & npm packages versions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stacks-signer",
+  "name": "stacks-signature-generation",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,40 +8,42 @@
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "audit": "npm audit",
+    "outdated": "npm outdated"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.19",
-    "@nextui-org/button": "^2.0.33",
-    "@nextui-org/react": "^2.4.1",
+    "@mui/icons-material": "^5.16.0",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/react": "^2.4.2",
     "@stacks/connect": "^7.7.1",
-    "@stacks/network": "^6.13.0",
-    "@stacks/stacking": "^6.15.0",
+    "@stacks/network": "^6.16.0",
+    "@stacks/stacking": "^6.16.0",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.4.0",
+    "@tsparticles/slim": "^3.5.0",
     "axios": "^1.7.2",
     "bitcoin-address-validation": "^2.2.3",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-tooltip": "^5.26.4",
+    "react-tooltip": "^5.27.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "eslint-plugin-react": "^7.34.2",
-    "postcss": "^8",
+    "eslint-plugin-react": "^7.34.3",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5",
+    "typescript": "5.4.5",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8"
