--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
     "@nextui-org/button": "^2.0.34",
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/react": "^2.4.6",
     "@stacks/connect": "^7.7.1",
     "@stacks/network": "^6.16.0",
     "@stacks/stacking": "^6.16.0",
@@ -40,12 +40,12 @@
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "eslint-plugin-react": "^7.34.3",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "5.4.5",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "eslint-plugin-react": "^7.34.3",
+    "postcss": "^8.4.39",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.4.5"
   }
 }
