implement toggleswitch darkmode-lightmode

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/icons-material": "^5.16.0",
     "@nextui-org/button": "^2.0.34",
     "@nextui-org/react": "^2.4.6",
+    "@nextui-org/switch": "^2.0.33",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
     "@stacks/connect": "^7.7.1",
     "@stacks/network": "^6.16.0",
     "@stacks/stacking": "^6.16.0",
@@ -26,7 +29,9 @@
     "axios": "^1.7.2",
     "bitcoin-address-validation": "^2.2.3",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.21",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-tooltip": "^5.27.1",
