--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bitcoin-address-validation": "^2.2.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
-    "next": "14.2.3",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
